--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -28,12 +28,13 @@
             app:layout_constraintVertical_bias="0.167"
             app:srcCompat="@drawable/imagen" />
 
+
         <Button
             android:id="@+id/iniciar_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/botton_iniciar"
-            android:textSize="@dimen/bottons"
+            android:textSize="18sp"
             android:onClick="@{() -> viewModel.start()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
